--- a/gev_tutorial_part_one.ipynb
+++ b/gev_tutorial_part_one.ipynb
@@ -5,9 +5,11 @@
    "id": "faa5361b-813d-48bd-b838-35322c371096",
    "metadata": {},
    "source": [
-    "# Example GEV Analysis - Part I\n",
+    "# Example GEV Analysis (Part I)\n",
     "\n",
     "Matthew Walker, [Kanute](kanute.com).  2021-11-12.\n",
+    "\n",
+    "For the latest version of this tutorial, please see [the GitHub repository](https://github.com/kanute-climate/gev-tutorial). \n",
     "\n",
     "In part one of this two-part series, we use artificial normally-distributed data to demonstrate how to fit a [Generalized Extreme Value (GEV) distribution](https://en.wikipedia.org/wiki/Generalized_extreme_value_distribution).  We then produce a return-period plot, showing both the observed data and the GEV fit."
    ]
