Added Leroy Bird as co-author

--- a/gev_tutorial_part_one.ipynb
+++ b/gev_tutorial_part_one.ipynb
@@ -7,11 +7,11 @@
    "source": [
     "# Example GEV Analysis (Part I)\n",
     "\n",
-    "Matthew Walker, [Kanute](kanute.com).  2021-11-12.\n",
+    "Matthew Walker, Leroy Bird, [Kanute](kanute.com).  2021-11-12.\n",
     "\n",
-    "For the latest version of this tutorial, please see [the GitHub repository](https://github.com/kanute-climate/gev-tutorial). \n",
+    "In part one of this two-part series, we use artificial normally-distributed data to demonstrate how to fit a [Generalized Extreme Value (GEV) distribution](https://en.wikipedia.org/wiki/Generalized_extreme_value_distribution).  We then produce a return-period plot, showing both the observed data and the GEV fit.\n",
     "\n",
-    "In part one of this two-part series, we use artificial normally-distributed data to demonstrate how to fit a [Generalized Extreme Value (GEV) distribution](https://en.wikipedia.org/wiki/Generalized_extreme_value_distribution).  We then produce a return-period plot, showing both the observed data and the GEV fit."
+    "For the latest version of this tutorial, please see [the GitHub repository](https://github.com/kanute-climate/gev-tutorial)."
    ]
   },
   {
