Added CC BY 4.0 licence.

--- a/gev_tutorial_part_two.ipynb
+++ b/gev_tutorial_part_two.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Example GEV Analysis with Confidence Intervals\n",
     "\n",
-    "Matthew Walker, Leroy Bird, [Kanute](kanute.com).  2021-11-12.\n",
+    "Matthew Walker, Leroy Bird, [Kanute](kanute.com).  2021-11-12.  This work is licenced under a Creative Commons Licence: [CC BY 4.0](https://creativecommons.org/licenses/by/4.0/).\n",
     "\n",
     "In part two of this two-part series, we use artificial normally-distributed data to demonstrate how to fit a [Generalized Extreme Value (GEV) distribution](https://en.wikipedia.org/wiki/Generalized_extreme_value_distribution) and then produce plots that indicate the confidence we should have in that GEV fit, along with confidence intervals for values for a given return period.\n",
     "\n",
