--- a/gev_tutorial_part_one.ipynb
+++ b/gev_tutorial_part_one.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Example GEV Analysis (Part I)\n",
     "\n",
-    "Matthew Walker, Leroy Bird, [Kanute](kanute.com).  2021-11-12.\n",
+    "Matthew Walker, Leroy Bird, [Kanute](kanute.com).  2021-11-12.  This work is licenced under a Creative Commons Licence: [CC BY 4.0](https://creativecommons.org/licenses/by/4.0/).\n",
     "\n",
     "In part one of this two-part series, we use artificial normally-distributed data to demonstrate how to fit a [Generalized Extreme Value (GEV) distribution](https://en.wikipedia.org/wiki/Generalized_extreme_value_distribution).  We then produce a return-period plot, showing both the observed data and the GEV fit.\n",
     "\n",
